@@ -6,6 +6,9 @@ Version 0.11.3
 
 - Fixed an issue with copy operations not working against
   proxies.
+- Changed the logging operations of the development server to
+  correctly log where the server is running in all situations
+  again.
 
 Version 0.11.2
 --------------
